--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # A ridiculously short timeout to test what happens when the session expires
 server.session.timeout=6000
 # Use a custom context path since this makes things a bit trickier than deploying at the root
-server.context-path=/demo
+server.context-path=/main
 # We don't want Vaadin's heart beat signal to keep the session alive
 vaadin.servlet.close-idle-sessions=true
 # The session timeout should be a multiple of the heartbeat interval
